# punchboot

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CPPLINT.cfg  Changelog  Kconfig  LICENSE  Makefile  Makefile.am  README.md  README.rst  TODO  ab.c  appveyor.yml  asn1.c  boot.c  boot_ab.c  bpak.c  codecov.yml  command.c  config.c  config.h  configure.ac  console.c  crc.c  crypto.c  delay.c  gpt.c  image.c  keystore_helpers.c  link.lds  main.c  pb.Dockerfile  pyproject.toml  run_docker.sh  rundocker.sh  (+11 more)
lib/: CMakeLists.txt  Kconfig  Makefile.am  api.c  api_authentication.c  api_board.c  api_boot.c  api_device.c  api_misc.c  api_partition.c  api_slc.c  api_stream.c  bpak.c  error.c  fletcher.c  gpt.c  ini.c  makefile.mk  memchr.c  memcmp.c  memcpy.c  memset.c  partition.c  printf.c  protocol.c  punchboot.pc.in  putchar.c  slc.c  snprintf.c  socket.c  strlcpy.c  strtoul.c  usb.c  uuid.c  wire.c
lib/bearssl/: Kconfig  makefile.mk  rsa_i62_pub.c
lib/fdt/: fdt_rw.c
lib/uuid/: uuid.h  uuid3.c
lib/xlat_tables/: xlat_tables_common.c  xlat_tables_private.h
lib/xlat_tables/aarch32/: xlat_tables.c
lib/xlat_tables/aarch64/: xlat_tables.c
python/: CMakeLists.txt  Makefile.am  __init__.py  exceptions.c  pb_wrapper.c  python_wrapper.c  python_wrapper.h  setup.py
src/: CMakeLists.txt  Kconfig  Makefile  Makefile.am  ab.c  asn1.c  auth.c  bio.c  board.c  boot.c  boot_fsm_impl.c  bpak.c  command.c  config.c  console.c  crc.c  crc.h  crypto.c  delay.c  dev.c  device_uuid.c  gpt.c  gpt_ptbl.c  help.c  image.c  imximage.cfg  keys.c  link.lds  link_flash.lds  main.c  main_fsm_impl.c  mmc.c  part.c  pb  pb.c  pb.h  pb.imx  pb.lds  pb_fsm.c  pb_fsm.h  (+26 more)
src/3pp/bearssl/: bearssl_rsa.h
src/3pp/fdt/: fdt.c  fdt_empty_tree.c  fdt_ro.c  fdt_rw.c  fdt_strerror.c  fdt_sw.c
src/arch/: Kconfig
src/arch/armv7a/: arch.c  arm32_aeabi_divmod.c  arm32_aeabi_divmod_a32.S  arm_asm.h  armv7a.h  asm_macros.S  boot.S  boot.c  cp15.S  entry_armv7a.S  link.lds  makefile.mk  misc_helpers.S  strlen-armv7.S  timer.S  timer.h  uldivmod.S
src/arch/armv7a-ve/: armv7a.h  entry_armv7a.S  linker.lds  makefile.mk  memset.S  vmsa.c  vmsa.h
src/arch/armv7m/: arch.c  boot.c  cache.c  entry.c  link.lds  makefile.mk
src/arch/armv8a/: arch.c  boot.S  cache-ops.S  entry.S  link.lds  makefile.mk  misc_helpers.S  timer.S  timer.h
src/bearssl/: ec_secp521r1.c  ecdsa_i31_bits.c  makefile.mk
src/board/bebop/: bebop.c  board.c  board_config.h  imximage.cfg  makefile.mk
src/board/imx8dxlevk/: Kconfig  board.c  makefile.mk  partitions.h
src/board/imx8mevk/: board.c  makefile.mk  partitions.h
src/board/imx8qxmek/: Kconfig  board.c  imx8qxmek.c  makefile.mk  partitions.h
src/board/imxrt1060evk/: Kconfig  board.c  imximage.cfg  link.lds  makefile.mk  partitions.h
src/board/jiffy/: board.c  board_config.h  imximage.cfg  jiffy.c  makefile.mk  partitions.h  pb.csf
src/board/pico8ml/: board.c  ddr.h  ddr_init.c  ddrphy_train.c  helper.c  imximage.cfg  makefile.mk  pico8ml.c
src/board/qemuarmv7/: makefile.mk
src/board/test/: board.c  board_config.h  makefile.mk  partitions.h  test.c
src/board/virt-arm64/: board.c  makefile.mk  partitions.h
src/boot/: Kconfig  ab_state.c  armv7m_baremetal.c  atf_linux.c  atf_linux_initrd.c  boot.c  image_helpers.c  linux.c  lk.c  makefile.mk
src/cm/: Kconfig  cm_main.c  makefile.mk
src/drivers/block/: Kconfig  bio.c  makefile.mk
src/drivers/crypto/: Kconfig  desc_defines.h  imx_caam.c  makefile.mk
src/drivers/fs/: Kconfig  lfs.c  lfs_util.c  makefile.mk
src/drivers/fuse/: Kconfig  imx_ocotp.c  makefile.mk  test_fuse_bio.c
src/drivers/gpio/: Kconfig  imx_gpio.c  makefile.mk
src/drivers/memc/: Kconfig  i25w_nor.c  imx_flexspi.c  imx_flexspi_private.h  makefile.mk
src/drivers/mmc/: Kconfig  imx_usdhc.c  imx_usdhc_private.h  makefile.mk  mmc_core.c
src/drivers/partition/: Kconfig  gpt.c  makefile.mk  static.c
src/drivers/timer/: Kconfig  imx_gpt.c  makefile.mk
src/drivers/uart/: Kconfig  imx_lpuart.c  imx_uart.c  makefile.mk
src/drivers/usb/: Kconfig  cdns3_udc_core.c  dwc3.c  usbd.c  (+12 more)
src/fdt/: fdt_wip.c
src/include/: board.h  boot.h  config.h  crc.h  emmc.h  gpt.h  image.h  io.h  keys.h  pb.h  pb_image.h  pb_string.h  pb_types.h  pbimage.h  plat.h  recovery.h  tinyprintf.h  types.h  uart.h  usb.h
src/kconfig/: Kconfig.generic
src/lib/: Kconfig  bpak.c  crc.c  der_helpers.c  gpt.c  makefile.mk  memcmp.c  memcpy.c  memmove.c  printf.c  putchar.c  snprintf.c  strcmp.c  string.c  strlen.c  strrchr.c  uuid.c
src/libc/: makefile.mk  strchr.c  strncmp.c  strtoul.c
src/plat/: Kconfig
src/tests/: common.c  common.sh  gcov.c  image1.pbc  image2.pbc  image3.pbc  image4.pbc  image5.pbc  image_inv_key_index.pbc  image_inv_key_index2.pbc  image_inv_key_index3.pbc  image_inv_key_index4.pbc  image_inv_key_index5.pbc  image_inv_key_index6.pbc  image_key_revoke.pbc  makefile.mk  overlapping_region.pbc  test.h  test_auth_cookie  test_authentication.sh  test_boot.c  test_boot_bpak.sh  test_boot_bpak2.sh  test_boot_bpak3.sh  test_boot_bpak4.sh  test_boot_bpak6.sh  test_boot_bpak7.sh  test_boot_bpak8.sh  test_boot_bpak9.sh  test_boot_pbi.sh  test_boot_pbi2.sh  test_boot_pbi3.sh  test_boot_pbi4.sh  test_boot_pbi5.sh  test_boot_pbi6.sh  test_boot_pbi7.sh  test_boot_pbi8.sh  test_cli.sh  test_config.sh  test_corrupt_backup_gpt.sh  (+26 more)
src/tools/: Makefile  createtoken.sh  csftool  gen_test_keystore.sh  importkey.py  test_ecdsa.py
src/uuid/: uuid3.c
src/vm/: xlat_tables_common.c
test/: CMakeLists.txt  Makefile.am  command.c  command.h  common.c  common.h  prepare_bpak_file.sh  test_api.c  test_api_partition.c  test_authentication.c  test_board.c  test_boot.c  test_bootloader_version.c  test_command_loop.c  test_command_loop.h  test_command_parser.c  test_command_parser.h  test_ctx.c  test_error_codes.c  test_help.c  test_magic.c  test_partition.c  test_protocol_alignment.c  test_slc.c  test_stream.c  test_wire_format.c
tools/pbstate/: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  configure.ac
(+1524 files in other folders)
